Refactored Base64